--- a/index.html
+++ b/index.html
@@ -5,25 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team-Kariukis</title>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="/css/reset.css" /> -->
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <header>
       <h1 class="title">Team Kariukis</h1>
     </header>
     <div class="main">
+      <div class="main__key">
+        <div class="key">
+          <div class="key__list key__active"></div>
+          <p>Active Tab</p>
+        </div>
+        <div class="key">
+          <div class="key__list key__deceased"></div>
+          <p>Deceased</p>
+        </div>
+        <div class="key">
+          <div class="key__list key__wife"></div>
+          <p>Wife</p>
+        </div>
+        <div class="key">
+          <div class="key__list key__husband"></div>
+          <p>husband</p>
+        </div>
+      </div>
+
       <ul id="myUL">
         <li class="house__kariuki">
-          <span class="parent deciesed">Kariuki</span>
+          <span class="parent deceased">Kariuki</span>
           <ul class="child">
             <li class="house__kariuki-wacuka">
-              <span class="parent deciesed">Wacuka (1st Wife)</span>
+              <span class="parent deceased">Wacuka (1st Wife)</span>
               <ul class="child">
                 <li class="house__sabina">
-                  <span class="parent deciesed">House of Sabina Njoki</span>
+                  <span class="parent deceased">House of Sabina Njoki</span>
                   <ul class="child">
                     <li>
-                      <span class="parent deciesed">Joel Kariuki</span>
+                      <span class="parent deceased">Joel Kariuki</span>
                       <ul class="child">
                         <span class="parent wife">Teresia</span>
                         <ul class="child">
@@ -64,7 +84,7 @@
                   </ul>
                 </li>
                 <li class="house__michael">
-                  <span class="parent deciesed">House of Michael Ndungu</span>
+                  <span class="parent deceased">House of Michael Ndungu</span>
                   <ul class="child">
                     <span class="parent wife">Mrs Michael</span>
                   </ul>
@@ -72,7 +92,7 @@
               </ul>
             </li>
             <li class="house__kariuki-naomi">
-              <span class="parent deciesed">Naomi (2nd Wife)</span>
+              <span class="parent deceased">Naomi (2nd Wife)</span>
               <ul class="child">
                 <li class="house__mugo">
                   <span class="parent">House of Mugo </span>
@@ -81,7 +101,7 @@
                       <span class="parent wife">Jane </span>
                       <ul class="child">
                         <li>
-                          <span class="parent deciesed">Kariuki</span>
+                          <span class="parent deceased">Kariuki</span>
                           <ul class="child">
                             <li>
                               <span class="parent wife">Alice</span>
@@ -181,7 +201,7 @@
                   </ul>
                 </li>
                 <li class="house__njenga">
-                  <span class="parent deciesed">House of Njenga</span>
+                  <span class="parent deceased">House of Njenga</span>
                   <ul class="child">
                     <span class="parent wife">Mrs Njenga</span>
                     <ul class="child">
@@ -274,7 +294,7 @@
                       </li>
                       <li>Naomi Nyokabi</li>
                       <li>Joel Kariuki</li>
-                      <li class="deciesed">Shipyra Wanjiku</li>
+                      <li class="deceased">Shipyra Wanjiku</li>
                     </ul>
                   </ul>
                 </li>
@@ -346,7 +366,7 @@
               </ul>
             </li>
             <li class="house__kariuki-wanjiru">
-              <span class="parent deciesed">Wanjiru (3rd Wife)</span>
+              <span class="parent deceased">Wanjiru (3rd Wife)</span>
               <ul class="child">
                 <li class="house__lilian">House of Lilian</li>
                 <li class="house__njenga">
@@ -404,6 +424,6 @@
       </ul>
     </div>
 
-    <script src="app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
