--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team-Kariukis</title>
     <!-- <link rel="stylesheet" href="/css/reset.css" /> -->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -424,6 +424,6 @@
       </ul>
     </div>
 
-    <script src="/js/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
