--- a/index.html
+++ b/index.html
@@ -13,22 +13,93 @@
       <h1 class="title">Team Kariukis</h1>
     </header>
     <div class="main">
-      <div class="main__key">
-        <div class="key">
-          <div class="key__list key__active"></div>
-          <p>Active Tab</p>
+      <div
+        class="main__key"
+        style="display: flex; align-items: center; display: flex"
+      >
+        <div
+          class="key"
+          style="
+            display: flex;
+            align-items: center;
+            margin-right: 15px;
+            display: flex;
+          "
+        >
+          <div
+            class="key__list key__active"
+            style="
+              width: 15px;
+              height: 15px;
+              border-radius: 50%;
+              margin-right: 5px;
+              background: limegreen;
+            "
+          ></div>
+          <p>Active</p>
         </div>
-        <div class="key">
-          <div class="key__list key__deceased"></div>
+        <div
+          class="key"
+          style="
+            display: flex;
+            align-items: center;
+            margin-right: 15px;
+            display: flex;
+          "
+        >
+          <div
+            class="key__list key__deceased"
+            style="
+              width: 15px;
+              height: 15px;
+              border-radius: 50%;
+              margin-right: 5px;
+              background: gray;
+            "
+          ></div>
           <p>Deceased</p>
         </div>
-        <div class="key">
-          <div class="key__list key__wife"></div>
+        <div
+          class="key"
+          style="
+            display: flex;
+            align-items: center;
+            margin-right: 15px;
+            display: flex;
+          "
+        >
+          <div
+            class="key__list key__wife"
+            style="
+              width: 15px;
+              height: 15px;
+              border-radius: 50%;
+              margin-right: 5px;
+              background: #fc46aa;
+            "
+          ></div>
           <p>Wife</p>
         </div>
-        <div class="key">
-          <div class="key__list key__husband"></div>
-          <p>husband</p>
+        <div
+          class="key"
+          style="
+            display: flex;
+            align-items: center;
+            margin-right: 15px;
+            display: flex;
+          "
+        >
+          <div
+            class="key__list key__husband"
+            style="
+              width: 15px;
+              height: 15px;
+              border-radius: 50%;
+              margin-right: 5px;
+              background: #279bc9;
+            "
+          ></div>
+          <p>Husband</p>
         </div>
       </div>
 
