--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
                         <ul class="child">
                           <span class="parent wife">Catherine Nyambura</span>
                           <ul class="child">
-                            <li>Christian Muhoho Kanyua</li>
-                            <li>Dylan Chao Kanyua</li>
+                            <li>Christian Muhoho</li>
+                            <li>Dylan Chao</li>
                           </ul>
                         </ul>
                       </li>
