working on json

--- a/naomilistdetails.html
+++ b/naomilistdetails.html
@@ -3,18 +3,171 @@
     <details>
         <summary class="house__kariuki-naomi">Naomi (2nd Wife)</summary>
         <ul class="child">
+
+            <li class="house__mugo">
+                <details>
+                    <summary><span class="parent">House of Mugo</span></summary>
+                    <ul>
+                        <li>
+                            <details>
+                                <summary><span class="parent wife">Jane</span></summary>
+                                <ul>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent deceased">Kariuki</span>
+                                            </summary>
+                                            <ul>
+                                                <li>
+                                                    <details>
+                                                        <summary><span class="parent wife">Alice</span>
+                                                        </summary>
+                                                        <ul>
+                                                            <li>Joseph Mugo</li>
+                                                            <li>Jane mwihaki</li>
+                                                            <li>Elizabeth</li>
+                                                            <li>Gitau</li>
+                                                        </ul>
+                                                    </details>
+                                                </li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Mwangi</span>
+                                            </summary>
+                                            <ul>
+                                                <li>Lydia Gathoni</li>
+                                                <li>Joseph Mugo</li>
+                                                <li>John Karanja</li>
+                                                <li>Willson Kariuki</li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Naomi</span></summary>
+                                            <ul>
+                                                <li>Joseph Mugo</li>
+                                                <li>Jane Mwihaki</li>
+                                                <li>James Mburu</li>
+                                                <li>Willson Kariuki</li>
+                                                <li>Eunice Nyambura</li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Njenga</span>
+                                            </summary>
+                                            <ul>
+                                                <li>
+                                                    <details>
+                                                        <summary><span class="parent wife">Easter
+                                                                Virginia</span></summary>
+                                                        <ul>
+                                                            <li>Joseph Mugo</li>
+                                                            <li>Paul Kamau</li>
+                                                            <li>Joseph Mugo</li>
+                                                            <li>Collins Mwangi</li>
+                                                        </ul>
+                                                    </details>
+                                                </li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Ndiba</span></summary>
+                                            <ul>
+                                                <li>
+                                                    <details>
+                                                        <summary><span class="parent wife">Nyambura</span>
+                                                        </summary>
+                                                        <ul>
+                                                            <li>Shiro Ndiba</li>
+                                                            <li>Mugo</li>
+                                                            <li>Jane Mwihaki</li>
+                                                        </ul>
+                                                    </details>
+                                                </li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Peter</span></summary>
+                                            <ul>
+                                                <li>
+                                                    <details>
+                                                        <summary><span class="parent wife">Rechael</span>
+                                                        </summary>
+                                                        <ul>
+                                                            <li>Kimani</li>
+                                                            <li>Jane Mwihaki</li>
+                                                        </ul>
+                                                    </details>
+                                                </li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <summary><span class="parent wife">caroline </span></summary>
+                                <ul>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Wangeci</span>
+                                            </summary>
+                                            <ul>
+                                                <li>Mwangi</li>
+                                                <li>Nyambura</li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>
+                                        <details>
+                                            <summary><span class="parent">Mureithi</span>
+                                            </summary>
+                                            <ul>
+                                                <li>
+                                                    <details>
+                                                        <summary><span class="parent wife">Carol</span>
+                                                        </summary>
+                                                        <ul>
+                                                            <li>Kelvin Mugo</li>
+                                                        </ul>
+                                                    </details>
+                                                </li>
+                                            </ul>
+                                        </details>
+                                    </li>
+                                    <li>Joel kariuki</li>
+                                </ul>
+                            </details>
+                        </li>
+                    </ul>
+                </details>
+            </li>
             <li class="house__njenga">
                 <details>
-                    <summary><span class="parent deceased">House of Njenga</span></summary>
+                    <summary><span class="parent deceased">House of Njenga</span>
+                    </summary>
                     <ul class="child">
                         <li>
                             <details>
-                                <summary><span class="parent wife">Mrs Njenga</span></summary>
+                                <summary><span class="parent wife">Mrs Njenga</span>
+                                </summary>
                                 <ul class="child">
                                     <li>Peter Githinji</li>
                                     <li>
                                         <details>
-                                            <summary><span class="parent">Naomi Nyokabi SNR</span>
+                                            <summary><span class="parent">Naomi
+                                                    Nyokabi
+                                                    SNR</span>
                                             </summary>
                                             <ul class="child">
                                                 <li>John Njenga</li>
@@ -24,7 +177,9 @@
                                     <li>Joel Karimi</li>
                                     <li>
                                         <details>
-                                            <summary><span class="parent">Naomi Nyokabi JRN</span>
+                                            <summary><span class="parent">Naomi
+                                                    Nyokabi
+                                                    JRN</span>
                                             </summary>
                                             <ul class="child">
                                                 <li>Ryn Wanjiku</li>
@@ -47,7 +202,8 @@
                             <ul class="child">
                                 <li>
                                     <details>
-                                        <summary><span class="parent">Easter</span></summary>
+                                        <summary><span class="parent">Easter</span>
+                                        </summary>
                                         <ul class="child">
                                             <li>
                                                 <details>
@@ -64,7 +220,9 @@
                                 </li>
                                 <li>
                                     <details>
-                                        <summary><span class="parent">Joel Kariuki</span></summary>
+                                        <summary><span class="parent">Joel
+                                                Kariuki</span>
+                                        </summary>
                                         <ul class="child">
                                             <li>
                                                 <details>
@@ -96,7 +254,8 @@
                     <ul class="child">
                         <li>
                             <details>
-                                <summary><span class="parent husband">Mr Kamau</span></summary>
+                                <summary><span class="parent husband">Mr
+                                        Kamau</span></summary>
                                 <ul class="child">
                                     <li>Njeri</li>
                                     <li>Naomi Nyokabi</li>
@@ -124,15 +283,18 @@
                                 <ul class="child">
                                     <li>
                                         <details>
-                                            <summary><span class="parent">Wyclif Kanyua</span>
+                                            <summary><span class="parent">Wyclif
+                                                    Kanyua</span>
                                             </summary>
                                             <ul class="child">
                                                 <li>
                                                     <details>
                                                         <summary><span class="parent wife">Catherine
-                                                                Nyambura</span></summary>
+                                                                Nyambura</span>
+                                                        </summary>
                                                         <ul class="child">
-                                                            <li>Christian Muhoho</li>
+                                                            <li>Christian Muhoho
+                                                            </li>
                                                             <li>Dylan Chao</li>
                                                         </ul>
                                                     </details>
@@ -166,11 +328,13 @@
                                     <li>
                                         <details>
                                             <summary>
-                                                <span class="parent">Joel kariuki</span>
+                                                <span class="parent">Joel
+                                                    kariuki</span>
                                             </summary>
                                             <ul class="child">
                                                 <li>
-                                                    <span class="wife">Ruth Kariuki</span>
+                                                    <span class="wife">Ruth
+                                                        Kariuki</span>
                                                 </li>
                                             </ul>
                                         </details>
@@ -234,7 +398,8 @@
                                     <li>
                                         <details>
                                             <summary>
-                                                <span class="parent">Mary Njeri</span>
+                                                <span class="parent">Mary
+                                                    Njeri</span>
                                             </summary>
                                             <ul class="child">
                                                 <li>Andrew Kigen</li>
@@ -244,7 +409,8 @@
                                     <li>
                                         <details>
                                             <summary>
-                                                <span class="parent">Joel Kariuki</span>
+                                                <span class="parent">Joel
+                                                    Kariuki</span>
                                             </summary>
                                             <ul class="child">
                                                 <li>
