--- a/wanjirulistdetails.html
+++ b/wanjirulistdetails.html
@@ -1,17 +1,17 @@
 <!-- start wanjiru  -->
 <li>
     <details>
-        <summary>Wanjiru (3rd Wife)</summary>
-        <ul>
+        <summary class="house__kariuki-naomi">Wanjiru (3rd Wife)</summary>
+        <ul class="child">
             <li class="house__lilian">House of Lilian</li>
-            <li>
+            <li class="house__njenga">
                 <details>
-                    <summary>House of Njenga</summary>
-                    <ul>
+                    <summary><span class="parent">House of Njenga</span></summary>
+                    <ul class="child">
                         <li>
                             <details>
-                                <summary>Mrs Njenga</summary>
-                                <ul>
+                                <summary><span class="parent wife">Mrs Njenga</span></summary>
+                                <ul class="child">
                                     <li>Kariuki</li>
                                     <li>Wanjiru</li>
                                     <li>Wambui</li>
@@ -20,8 +20,9 @@
                                     <li>Njeri</li>
                                     <li>
                                         <details>
-                                            <summary>Nyambura</summary>
-                                            <ul>
+                                            <summary><span class="parent">Nyambura</span>
+                                            </summary>
+                                            <ul class="child">
                                                 <li>Wangari</li>
                                                 <li>Wanjiku</li>
                                             </ul>
@@ -35,14 +36,14 @@
                 </details>
             </li>
             <li class="house__njeri">House of Njeri</li>
-            <li>
+            <li class="house__wamboi">
                 <details>
-                    <summary>House of Wambui</summary>
-                    <ul>
+                    <summary><span class="parent">House of Wambui</span></summary>
+                    <ul class="child">
                         <li>
                             <details>
-                                <summary>Wanjiru</summary>
-                                <ul>
+                                <summary><span class="parent">Wanjiru</span></summary>
+                                <ul class="child">
                                     <li>Newton Njenga</li>
                                     <li>Jackson Njuguna</li>
                                     <li>Stanly kamau</li>
@@ -53,8 +54,8 @@
                         </li>
                         <li>
                             <details>
-                                <summary>Njoki</summary>
-                                <ul>
+                                <summary><span class="parent">Njoki</span></summary>
+                                <ul class="child">
                                     <li>Florence Wamboi</li>
                                     <li>Michael Theuri</li>
                                 </ul>
