--- a/index.html
+++ b/index.html
@@ -710,6 +710,12 @@
         </ul>
         <!-- body -->
     </div>
+
+
+    <script>
+
+        fetch('./data/main.json').then((response) => response.json()).then((json) => console.log(json));
+    </script>
 </body>
 
 </html>
